force-app/main/default/objects/custom_create130__c/custom_create130__c.object-meta.xml
<CustomObject>
    <label>Custom created object130</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects130</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>