force-app/main/default/objects/custom_create130__c/fields/custom_create_130field634__c.field-meta.xml
<CustomField>
    <fullName>custom_create_130field634__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 130field634</label>
    <type>Checkbox</type>
</CustomField>